# HSE

Algorithms and Data Structures/Bucket Sort/: README.md  bucketSort.cpp
Algorithms and Data Structures/Maze BFS/: README.md  mazeBFS.cpp
Algorithms and Data Structures/Radix Sort/: README.md  radixSort.cpp
Algorithms and Data Structures/lab_1/: merge_NEW.cpp  qsort_worst_case.cpp  quick_sort.cpp  right_insertion_sort.cpp
Algorithms and Data Structures/lab_2/: b_search.cpp  brackets.cpp  doubling_search.cpp  polish_not.cpp  sequential_search.cpp
Algorithms and Data Structures/lab_4/: knapsack.cpp  stone.cpp
Algorithms and Data Structures/sorts/: bubble_sort.cpp  insertion_sort.cpp  merge_VEC.cpp  radix_sort.cpp  selection_sort.cpp
BD/: README.md
C labs/CAESAR/: CMakeLists.txt  caesar.c  caesar.h  file.c  file.h  main.c
C labs/Card/: CMakeLists.txt  card.c  card.h  main.c
C labs/CatalogTree/: catalog_tree.c  catalog_tree.h  queue.h  queue_2.c  queue_2.h
C labs/HarryPotter/: CMakeLists.txt  test.c
C labs/SpanningTree/: CMakeLists.txt  main.c  spanning_tree.c  spanning_tree.h
C labs/UNION_USAGE/: CMakeLists.txt  dict.c  dict.h  main.c
C++/Deanery/: CMakeLists.txt
C++/Deanery/include/: Deanary.h  Group.h  Reader.h  Student.h
C++/Deanery/src/: Deanary.cpp  Reader.cpp  Student.cpp  main.cpp
CatalogTree/: CMakeLists.txt  catalog_tree.c  catalog_tree.h  main.c  queue.c
IAD/DataAnalysis/: Tasks_pandas.ipynb
IAD/hw1/: m2_t1.py  m2_t2.py  m2_t3.py
IAD/hw2/: m3_t1.py  (+1 more)
server-client/: CMakeLists.txt  client.c  client.h  server.c  server.h
(+149 files in other folders)
